TFP-5554: Fiks av inntektskategori og ArbeidsforholdKomplettVurderingType for uthenting av riktig tekst for historikkinnslag.